--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-   <head lang="en">
-      <title>Editor</title>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-      <link rel="stylesheet" type="text/css" href="css/cloudlion.css" />
-      <link rel="icon" href="lion.png" type="image/x-icon" />
-      <script src="webjars/jquery/2.1.4/jquery.min.js"></script>
-   </head>
-   <body>
-      <header id = "header"></header>
-      <div id="option">
-         Pick a Theme
-         <select>
-            <option value="Chaos" onclick="setTheme()">Chaos</option>
-            <option value="katzenmilch">Katzenmilch</option>
-         </select>
-      </div>
-      <div id="editor">function foo(items) {
-         var x = "All this is syntax highlighted";
-         return x;
-         }
-      </div>
-      <script src="webjars/ace/1.2.0/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-      <script>
-         var editor = ace.edit("editor");
-         editor.setTheme("ace/theme/katzenmilch");
-         editor.session.setMode("ace/mode/javascript");
-      </script>
-      <script src="js/header.js"></script>
-   </body>
+<head lang="en">
+<title>Editor</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet" type="text/css" href="css/cloudlion.css" />
+<link rel="icon" href="lion.png" type="image/x-icon" />
+<script src="webjars/jquery/2.1.4/jquery.min.js"></script>
+</head>
+<body>
+	<header id="header"></header>
+	<div id="option">
+		<div>
+			<h3>Pick a Theme</h3>
+			<select id="theme">
+			</select>
+		</div>
+		<div>
+			<h3>Pick a Language</h3>
+			<select id="lang">
+			</select>
+		</div>
+		<div>
+			<h3>Select Font Size</h3>
+			<select id="font">
+			</select>
+		</div>
+	</div>
+	<div id="editor">function foo(items) { var x = "All this is
+		syntax highlighted"; return x; }</div>
+	<script src="webjars/ace/1.2.0/src-min-noconflict/ace.js"
+		type="text/javascript" charset="utf-8"></script>
+	<script src="js/theme.js"></script>
+	<script src="js/header.js"></script>
+</body>
 </html>
