--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -25,12 +25,17 @@
 			<select id="font">
 			</select>
 		</div>
+		<div>
+			<h3>Testing Options</h3>
+			<select id="compiler">
+			</select>
+		</div>
 	</div>
-	<div id="editor">function foo(items) { var x = "All this is
-		syntax highlighted"; return x; }</div>
+	<div id="editor">function foo(items) { var x = "All this is syntax highlighted"; return x; }</div>
 	<script src="webjars/ace/1.2.0/src-min-noconflict/ace.js"
 		type="text/javascript" charset="utf-8"></script>
 	<script src="js/theme.js"></script>
 	<script src="js/header.js"></script>
+	<script src="js/request.js"></script>
 </body>
 </html>
