Login with database

--- a/CloudLion/src/main/resources/templates/login.html
+++ b/CloudLion/src/main/resources/templates/login.html
@@ -12,8 +12,8 @@
       <div id="login">
          <h3>Please Login</h3>
          <form th:action="@{/login}" method="post">
-         <label for="userName"></label>
-         <input type="text" name="username" id="userName" required="required" placeholder="Username"/><br/>
+         <label for="email"></label>
+         <input type="email" name="email" id="email" required="required" placeholder="Email"/><br/>
          <label for="myPassword"></label>
          <input type="password" name="password" id="myPassword" placeholder="Password"/><br/>
          <input type="Submit" value="Login"/>
