changed onclick to onchange for chrome

--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -37,17 +37,17 @@
 		<div class="col-md-2 sidebar" id="option">
 			<div>
 				<h3>Pick a Theme</h3>
-				<select id="theme">
+				<select id="theme" onchange="setTheme()">
 				</select>
 			</div>
 			<div>
 				<h3>Pick a Language</h3>
-				<select id="lang">
+				<select id="lang" onchange="setLang()">
 				</select>
 			</div>
 			<div>
 				<h3>Select Font Size</h3>
-				<select id="font">
+				<select id="font" onchange="setFont()">
 				</select>
 			</div>
 		</div>
