--- a/CloudLion/src/main/resources/templates/login.html
+++ b/CloudLion/src/main/resources/templates/login.html
@@ -23,18 +23,18 @@
 			</div>
 		</div>
 	</nav>
-		<form id="login" class="form-horizontal" role="form">
+		<form th:action="@{/login}" method="post" class="form-horizontal" role="form">
 		<h3>Sign In</h3>
 	   <div class="form-group">
-	     <label class="control-label col-sm-2" for="email">Email:</label>
+	     <label class="control-label col-sm-2" for="email">Email: demo@localhost</label>
 	     <div class="col-sm-10">
-	       <input type="email" class="form-control" id="email" placeholder="Enter email"></input>
+	       <input type="email" class="form-control" name="email" id="email" placeholder="Enter email"></input>
 	     </div>
 	   </div>
 	   <div class="form-group">
-	     <label class="control-label col-sm-2" for="pwd">Password:</label>
+	     <label class="control-label col-sm-2" for="pwd">Password: demo</label>
 	     <div class="col-sm-10">
-	       <input type="password" class="form-control" id="pwd" placeholder="Enter password"></input>
+	       <input type="password" class="form-control" name="password" id="pwd" placeholder="Enter password"></input>
 	     </div>
 	   </div>
 	   <div class="form-group">
