--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -25,6 +25,11 @@
 			<select id="font">
 			</select>
 		</div>
+		<div>
+			<h3>Options</h3>
+			<select id="file" onchange="setFile()">
+			</select>
+		</div>
 	</div>
 	<div id="editor">function foo(items) { var x = "All this is
 		syntax highlighted"; return x; }</div>
