--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -26,9 +26,7 @@
 			</select>
 		</div>
 		<div>
-			<h3>Testing Options</h3>
-			<select id="compiler">
-			</select>
+			<button type="button" onclick="compileCode()">Compile</button>
 		</div>
 	</div>
 	<div id="editor">function foo(items) { var x = "All this is syntax highlighted"; return x; }</div>
