--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -25,6 +25,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="index">Home</a></li>
 					<li><a href="editor">Editor</a></li>
+					<li><a href="setting">Settings</a></li>
 					<li><a href="signup">Sign Up</a></li>
 				</ul>
 			</div>
