--- a/CloudLion/src/main/resources/templates/signup.html
+++ b/CloudLion/src/main/resources/templates/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-<title>Editor</title>
+<title>Sign Up</title>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <link rel="icon" href="lion.png" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css"/>
@@ -16,9 +16,10 @@
 			</div>
 			<div>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href ="index">Home</a></li>
-					<li><a href ="editor">Editor</a></li>
-					<li><a href ="signup">Sign Up</a></li>
+					<li><a href="index">Home</a></li>
+					<li><a href="editor">Editor</a></li>
+					<li><a href="setting">Settings</a></li>
+					<li><a href="signup">Sign Up</a></li>
 				</ul>
 			</div>
 		</div>
