--- a/CloudLion/src/main/resources/templates/index.html
+++ b/CloudLion/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-<title>Editor</title>
+<title>Home</title>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <link rel="icon" href="lion.png" type="image/x-icon" />
       <script src="webjars/jquery/2.1.4/jquery.min.js"></script>
@@ -17,9 +17,10 @@
 			</div>
 			<div>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href ="index">Home</a></li>
-					<li><a href ="editor">Editor</a></li>
-					<li><a href ="signup">Sign Up</a></li>
+					<li><a href="index">Home</a></li>
+					<li><a href="editor">Editor</a></li>
+					<li><a href="setting">Settings</a></li>
+					<li><a href="signup">Sign Up</a></li>
 				</ul>
 			</div>
 		</div>
