broken middle of fixing

--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -85,6 +85,7 @@
 	<script src="js/theme.js"></script>
 	<script src="js/header.js"></script>
 	<script src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="js/themelist.js"></script>
 
 </body>
 
