--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -31,11 +31,14 @@
 			</select>
 		</div>
 	</div>
-	<div id="editor">function foo(items) { var x = "All this is
-		syntax highlighted"; return x; }</div>
+	<div id="editor">function foo(items) { 
+	var x = "All this is syntax highlighted"; 
+	return x; 
+}</div>
 	<script src="webjars/ace/1.2.0/src-min-noconflict/ace.js"
 		type="text/javascript" charset="utf-8"></script>
 	<script src="js/theme.js"></script>
 	<script src="js/header.js"></script>
+	<script src="js/textRequest.js"></script>
 </body>
 </html>
