--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -30,7 +30,13 @@
 			<select id="file" onchange="setFile()">
 			</select>
 		</div>
-	</div>
+		<div>
+			<form action="">
+			<h3>Select a file to load: </h3><br></br>
+			<input type="file" name="files" id="fileElem" />
+			</form>
+		</div>
+		</div>
 	<div id="editor">function foo(items) { 
 	var x = "All this is syntax highlighted"; 
 	return x; 
