--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -64,7 +64,9 @@
 			<div>
 				<button type="button" onclick="showContent()">Show Content</button>
 			</div>
-			
+			<div>
+			<button type="button" onclick="compileCode()">Compile</button>
+		</div>
 		</div>
 		<div class="col-md-10 col-xs-10" id="rightCol">
 			<div class="row" id="editor">
