--- a/CloudLion/src/main/resources/templates/login.html
+++ b/CloudLion/src/main/resources/templates/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
@@ -25,7 +24,7 @@
 			</div>
 		</div>
 	</nav>
-		<form th:action="@{/login}" method="post" class="form-horizontal" role="form">
+		<form th:action="@{/login}" method="post" id="login" class="form-horizontal" role="form">
 		<h3>Sign In</h3>
 	   <div class="form-group">
 	     <label class="control-label col-sm-2" for="email">Email: demo@localhost</label>
