--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -26,7 +26,7 @@
 					<li><a href="index">Home</a></li>
 					<li><a href="editor">Editor</a></li>
 					<li><a href="setting">Settings</a></li>
-					<li><a href="signup">Sign Up</a></li>
+					<li><a href="logout">Log Out</a></li>
 				</ul>
 			</div>
 		</div>
