--- a/CloudLion/src/main/resources/templates/editor.html
+++ b/CloudLion/src/main/resources/templates/editor.html
@@ -33,15 +33,17 @@
 		</div>
 	</nav>
 
-
-	<!-- Modal content-->
-	<div class="modal-content">
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal">&times;</button>
-			<h4 class="modal-title">Settings</h4>
-		</div>
-		<div class="modal-body">
-			<div>
+	  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Settings</h4>
+        </div>
+        <div class="modal-body">
+          	<div>
 				<h3>Pick a Theme</h3>
 				<select id="theme" onchange="setTheme()">
 				</select>
@@ -61,16 +63,18 @@
 				<select id="file" onchange="setFile()">
 				</select>
 			</div>
-		</div>
-		<div class="modal-footer">
-			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		</div>
-	</div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
 
-
-	<div class="row" id="main">
+<div class="row" id="main">
 		<div class="col-md-2 col-xs-2 sidebar" id="option">
-			<div>
+					<div>
 				<form action="">
 					<h3>Select a file to load:</h3>
 					<br></br> <input type="file" name="files" id="fileElem" />
@@ -80,26 +84,27 @@
 				<button type="button" onclick="compileCode()">Compile</button>
 			</div>
 			<div>
-				<h3>Files</h3>
-				<button type="button" onclick="addFolder()">Add Folder</button>
-				<div id="folders"></div>
+				<h3>Files  <button type="button" onclick="addFolder()">Add Folder</button> </h3>
+				<div id="folders">
+				</div>
 			</div>
-
+			
 		</div>
 		<div class="col-md-10 col-xs-10" id="rightCol">
 			<div class="row" id="editor">
-				<div id="textContent">******Make a new folder. This will not
-					be saved.******</div>
+				<div id="textContent">                                              ******Make a new folder. This will not be saved.******</div>
 			</div>
 			<div class="row" id="terminal">
-				<div ng-app="execute" ng-controller="console">
-					<terminal terminal-class="black">
-					<p class="click-me">Click me to start commanding !</p>
-					</terminal>
-				</div>
+			<div ng-app="execute" ng-controller="console">
+				<terminal terminal-class="black">
+				<p class="click-me">Click me to start commanding !</p>
+				</terminal>
 			</div>
 		</div>
+		</div>
 	</div>
+
+
 
 	<script src="webjars/ace/1.2.0/src-min-noconflict/ace.js"
 		type="text/javascript" charset="utf-8"></script>
